# professional-education

./: .gitignore  AGENDA.md  CHANGELOG.md  EVENT-PLANNING.md  LICENSE.md  README.md  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  create-token.ts  generate-keypair.ts  get-token-mint.ts  load-keypair.ts  make-table-of-contents.ts  mint-tokens.ts  package-lock.json  package.json
.github/workflows/: tests.yaml
labs/: add-token-metadata-umi.ts  burn-tokens.ts  check-balance.ts  create-associated-token-account.ts  create-associated-token-accounts.ts  create-metaplex-collection.ts  create-metaplex-nft-collection.ts  create-metaplex-nft.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint-alt.ts  create-token-mint-with-metadata-raw.ts  create-token-mint-with-metadata.ts  create-token-mint.ts  delegate-tokens.ts  export-key-to-base58.ts  get-token-mint.ts  metaplex.ts  mint-tokens.ts  package-lock.json  package.json  sample-nft-collection-offchain-data.json  sample-nft-offchain-data.json  sample-token-metadata.json  send-sol.ts  update-metaplex-nft.ts  update-token-metadata.ts  use-counter-program.ts  verify-metaplex-collection.ts
labs/escrow/: MOVED.md  README.md  package-lock.json  package.json
labs/favorites/: Anchor.toml  MOVED.md  package-lock.json  package.json
labs/favorites/programs/favorites/: Cargo.toml
labs/favorites/programs/favorites/src/: lib.rs
labs/lending/: Anchor.toml
labs/metaplex-umi/: create-collection.ts  create-nft.ts  update-nft.ts
labs/tokens/: create-associated-token-account.ts  (+1 more)
(+21 files in other folders)
